Corrected a shuffle breaking mistake